deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: laravel
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-app
  namespace: laravel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: laravel-app
  template:
    metadata:
      labels:
        app: laravel-app
    spec:
      containers:
        - name: laravel
          image: buberistovska/blog:v11
          ports:
            - containerPort: 80
          volumeMounts:
            - name: laravel-persistent-storage
              mountPath: /var/www/html
      volumes:
        - name: laravel-persistent-storage
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: laravel-service
  namespace: laravel
spec:
  selector:
    app: laravel-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: laravel-ingress
  namespace: laravel
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: bube.blog.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: laravel-service
                port:
                  number: 80
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  namespace: laravel
spec:
  serviceName: mysql
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: buberistovska/mysql:v11
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
  volumeClaimTemplates:
    - metadata:
        name: mysql-persistent-storage
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
